# projet-secu-iot

./: .gitignore  db_utils.py  discord_utils.py  fill_db_dummy.sql  main.py  readme.md  requirements.txt  test_opencv.py  test_webcam.py  test_yolo11n.py
dashboard_secu_iot/: pyproject.toml
dashboard_secu_iot/dashboard/: __init__.py  auth.py  dashboard.py  db.py  intrusion.py  log.py  schema.sql  video.py
dashboard_secu_iot/dashboard/static/images/: aaaa.mp4.enc
dashboard_secu_iot/dashboard/static/scripts/: auth.js  dashboard.js  intrusion.js  load_video.js  log.js  login.js  nav.js  register.js
dashboard_secu_iot/dashboard/templates/: dashboard.html  intrusion.html  log.html
dashboard_secu_iot/dashboard/templates/auth/: login.html  register.html
models/yolo11n_ncnn_model/: metadata.yaml
models/yolo11n_ncnn_model_192/: metadata.yaml  model.ncnn.param  model_ncnn.py
models/yolo11n_ncnn_model_240/: metadata.yaml  model.ncnn.param  model_ncnn.py
models/yolo11n_ncnn_model_96/: metadata.yaml  model.ncnn.param  model_ncnn.py
