[project]
name = "dashboard-secu-iot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "cryptography>=44.0.2",
    "cryptography-fernet>=0.1.0",
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
]
